# free-us-engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  imgui.ini
editor/: CMakeLists.txt  editor.cpp  main.cpp  scene_view.cpp  scene_view.h
editor/ECS/: entity_view.cpp
editor/ECS/components/: geometry_view.cpp  geometry_view.h  raymarched_geometry.cpp  raymarched_geometry.h  selected_entity_view.cpp  selected_entity_view.h  transform_view.cpp  transform_view.h
editor/ECS/components/lights/: pointlight_view.cpp  pointlight_view.h
editor/assets/: assets.cpp  assets.h  assets_view.cpp  assets_view.h  selected_asset_view.cpp  selected_asset_view.h
editor/content/: model_browser.cpp  model_browser.h  model_popup.h  model_pupup.cpp  model_view.cpp  model_view.h  selected_model_view.cpp  selected_model_view.h
editor/design_variations/: professional_slider.cpp  professional_slider.h  professional_style.cpp  professional_style.h
editor/files/: file_browser.cpp  file_browser.h  file_popup.cpp  file_popup.h
editor/main_bar/: main_menu.cpp  main_menu.h
editor/main_bar/file/: file.cpp  file.h  load.cpp  load.h  new_project.cpp  new_project.h  save.cpp  save.h  save_as.cpp  save_as.h  unload.cpp  unload.h
editor/materials/: material_browser.cpp  material_browser.h  material_popup.cpp  material_popup.h  material_view.cpp  material_view.h  new_material_popup.cpp  new_material_popup.h  selected_material_view.cpp  selected_material_view.h
editor/shaders/: selected_shader_view.cpp  selected_shader_view.h  shader_browser.cpp  shader_browser.h  shader_view.cpp  shader_view.h
editor/utility/: EditorPath.cpp  EditorPath.h
editor/utility/helpers/: draw_browser.cpp  draw_browser.h  string_browser.cpp  string_browser.h
editor/utility/helpers/progress_bar/: progess_popup.cpp  progess_popup.h  progress_bar.cpp  progress_bar.h
editor/utility/helpers/textbox/: textbox_popup.cpp  textbox_popup.h
engine/: CMakeLists.txt  application.cpp  application.h
engine/ECS/: ecs.cpp  ecs.h  entity.cpp  entity.h
engine/ECS/components/: geometry.cpp  geometry.h  instanced_geometry.cpp  instanced_geometry.h  raymarched_geometry.cpp  raymarched_geometry.h  transform.cpp  transform.h
engine/ECS/components/lights/: point_light.cpp  point_light.h
engine/assets/resources/: proiect.txt
engine/assets/resources/objects/ground/: ground.fbx
engine/content/: content_loader.cpp  mesh.cpp  mesh.h  model.cpp  model.h  scene.cpp  scene.h
engine/content/primitives/: primitive_loader.cpp  primitive_loader.h
engine/core/: camera.cpp  common.h
engine/data/: Framebuffer.cpp  Framebuffer.h
engine/editor/: editor.cpp  editor.h
engine/editor/ECS/: entity_view.cpp
engine/editor/ECS/components/: selected_entity_view.cpp
engine/editor/content/: model_browser.cpp  model_popup.h  model_pupup.cpp  model_view.cpp
engine/editor/files/: file_browser.cpp  file_popup.cpp  file_popup.h
engine/editor/utility/helpers/: draw_browser.h
engine/managers/: MaterialManager.cpp  MaterialManager.h  ProgramManager.cpp  ProgramManager.h  ShaderManager.cpp  ShaderManager.h  TextureManager.cpp  TextureManager.h
engine/materials/: materials.cpp  materials.h
engine/ourShaders/: basicForm.fs  baston.txt  capatUmbrela.txt  cone.txt  cube.txt  cylinder.txt  ghostly_fractal.fs  jumpingUmbrellas.fs  mandel.fs  mandelbulb.fs  nyan.fs  octahedron.txt  pyramid.txt  rectangularPrism.txt  ritualisticVase.fs  someTulip.fs  sphare.txt  streetLight.txt  streetWithUmbrellas.fs  tetrahedron.txt  trees.fs  umbrella.fs  umbrellaStreet.fs
engine/raymarcher/: renderer.cpp  renderer.h
engine/shaders/: program.cpp  program.h  program_uniforms.cpp  shader.cpp  shader.h
engine/shaders/src/: default.fs  default.vs  instanced.vs  vertex.glsl
engine/shaders/src/raymarching/: raymarch.fs  raymarch.vs
engine/shaders/src/waves/: klein.gs  klein.vs  sin_waves.vs
engine/shaders/src/wireframe/: wireframe.fs  wireframe.gs
engine/thread/: main_thread_dispatcher.cpp  main_thread_dispatcher.h
engine/utility/: assimp_glm.h  path.cpp  path.h  uid.h  vector.h
glad/src/: glad.c
glm/ext/: _matrix_vectorize.hpp  matrix_clip_space.hpp  (+99 more)
serializer/: CMakeLists.txt
serializer/content/: mesh.cpp  mesh.h  model.cpp  model.h  scene.cpp  scene.h
serializer/core/: serializer.cpp  serializer.h
serializer/ecs/: ecs.cpp  ecs.h
serializer/ecs/components/: geometry.cpp  geometry.h  instanced_geometry.cpp  instanced_geometry.h  point_light.cpp  point_light.h  transform.cpp  transform.h
serializer/file/: temporary_files.cpp  temporary_files.h
serializer/materials/: materials.cpp  materials.h  textures.cpp  textures.h
serializer/project/: active_project.cpp  active_project.h  scene.cpp  scene.h
serializer/shaders/: shader.cpp  shader.h
testing/: CMakeLists.txt  main.cpp
(+129 files in other folders)
